force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__New_Corp_WD_MarketBased_BudgetWeight__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__New_Corp_WD_MarketBased_BudgetWeight__c</fullName>
    <formula>Negoptim__New_Corp_WD_MarketBased_Pts__c / Negoptim__Ref_Budget_WD_MarketBased_Pts__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Corp WD MarketBased Budget Weight</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>