force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__NewClientNDCltBasedPtsGapNegoP1__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__NewClientNDCltBasedPtsGapNegoP1__c</fullName>
    <formula>Negoptim__New_Client_ND_ClientBased_Pts__c/*-TMP_DN_1_Nego_Ensg__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client ND CltBased Pts Gap Nego N-1</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>