force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__NewClientWDClientBasedPtsGapNegoP1__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__NewClientWDClientBasedPtsGapNegoP1__c</fullName>
    <formula>Negoptim__New_Client_WD_ClientBased_Pts__c-Negoptim__Ref_Client_WD_ClientBased_Nego_Pts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client WD CltBased Pts GapNego N-1</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>