force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__Priority__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Priority__c</fullName>
    <description>Display the priority of the product on the right channel.</description>
    <formula>/* Define the priority of the Product for the right channel
- The channel is the BU Target for Budget Assortment and the BU source for others
- Be carefull the customer could choose to have different names for the BU Channel eg HMSM... you have to adapt the formula */


CASE(if(  Negoptim__Assortment_type__c  = &apos;Budget&apos;,  Negoptim__Assortment_BU__r.Negoptim__BU_Target__r.Name , Negoptim__Assortment_BU__r.Negoptim__BU_source__r.Name ), 
  &apos;HM&apos;, text(Negoptim__Product__r.Negoptim__PriorityHM__c) ,
  &apos;SM&apos;, text(Negoptim__Product__r.Negoptim__Priority_SM__c) ,
  &apos;Proxi&apos;, text( Negoptim__Product__r.Negoptim__PriorityConv__c ) ,
  &apos;Drive&apos;, text( Negoptim__Product__r.Negoptim__PriorityDrive__c ) ,
  &apos;LAD&apos;, text( Negoptim__Product__r.Negoptim__PriorityWeb__c ) ,
  &apos;Cash&amp;Carry&apos;, text( Negoptim__Product__r.Negoptim__PriorityCashCarry__c ), 
  null)</formula>
    <inlineHelpText>La formule peut devoir être adaptée en fonction des noms des BU circuits</inlineHelpText>
    <label>Priority</label>
    <type>Text</type>
</CustomField>