force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Product_Code__c</fullName>
    <formula>Negoptim__Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>