force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__Product_End_Year__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Product_End_Year__c</fullName>
    <formula>YEAR(Negoptim__Product__r.Negoptim__Market_End_of_Life_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product End Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>