force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__Product_Linked_Code__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Product_Linked_Code__c</fullName>
    <formula>Negoptim__Product_linked__r.ProductCode</formula>
    <label>Linked Product Code</label>
    <type>Text</type>
</CustomField>