force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__Product_Linked_EAN__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Product_Linked_EAN__c</fullName>
    <formula>Negoptim__Product_linked__r.Negoptim__Product_EAN__c</formula>
    <label>Linked Product EAN</label>
    <type>Text</type>
</CustomField>