force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__Record_date__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Record_date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Record date</label>
    <type>Date</type>
</CustomField>