force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__Ref_BU_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ref_BU_Cluster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref BU Cluster</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Ref_BU_Cluster__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Negoptim__Orga_BU__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Assortment Cluster</value>
        </filterItems>
        <filterItems>
            <field>Negoptim__Orga_BU__c.Negoptim__Country_origin__r.Name</field>
            <operation>notEqual</operation>
            <value>Espagne</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Negoptim__Orga_BU__c</referenceTo>
    <relationshipLabel>Assortiment BU Détails (Ref BU Cluster)</relationshipLabel>
    <relationshipName>Assortiment_BU_Histo</relationshipName>
    <type>Lookup</type>
</CustomField>