force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__Ref_Budget_WD_MarketBased_Pts__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ref_Budget_WD_MarketBased_Pts__c</fullName>
    <formula>Negoptim__Ref_Corp_Assortment__r.Negoptim__New_Client_WD_MarketBased_Pts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Budget WD MarketBased (Pts)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>