force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__Ref_Client_Clust1__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ref_Client_Clust1__c</fullName>
    <formula>Negoptim__Ref_Client_Assortment__r.Negoptim__Client_Clust1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Client Clust1</label>
    <type>Checkbox</type>
</CustomField>