force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__Ref_Client_ProductNumber__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ref_Client_ProductNumber__c</fullName>
    <formula>Negoptim__Ref_Client_Assortment__r.Negoptim__New_Client_ProductNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Client ProductNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>