force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__Ref_Client_WD_ClientBased_Nego__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ref_Client_WD_ClientBased_Nego__c</fullName>
    <formula>Negoptim__Ref_Client_Assortment__r.Negoptim__L4L_Client_WD_ClientBased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Client WD ClientBased Nego</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>