force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__Ref_Client_WD_MarketBased__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ref_Client_WD_MarketBased__c</fullName>
    <formula>Negoptim__Ref_Client_Assortment__r.Negoptim__Fact_WD_MarketBased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Client WD MarketBased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>