force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__Ref_Client_WD_MarketBased_Pts__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ref_Client_WD_MarketBased_Pts__c</fullName>
    <formula>Negoptim__Ref_Client_WD_MarketBased__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Client WD MarketBased (Pts)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>