force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__Ref_Corp_Assortment__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ref_Corp_Assortment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref Corp Assortment</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Ref_Corp_Assortment__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Negoptim__Assortment_Detail__c.Negoptim__Assortment_BU__r.Negoptim__Assortment_type__c</field>
            <operation>equals</operation>
            <value>In</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Negoptim__Assortment_Detail__c</referenceTo>
    <relationshipLabel>Assortment BU Details</relationshipLabel>
    <relationshipName>Assortment_BU_Details</relationshipName>
    <type>Lookup</type>
</CustomField>