force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__Ref_Corp_Clust_Cplt1__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ref_Corp_Clust_Cplt1__c</fullName>
    <formula>Negoptim__Ref_Corp_Assortment__r.Negoptim__Client_Clust_Cplt1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Corp Clust Cplt1</label>
    <type>Checkbox</type>
</CustomField>