force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__Ref_Corp_WD_ClientBased__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Ref_Corp_WD_ClientBased__c</fullName>
    <formula>Negoptim__Ref_Corp_Assortment__r.Negoptim__New_Client_WD_ClientBased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Corp WD ClientBased</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>