force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__RefClientNDCltBasedPts__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__RefClientNDCltBasedPts__c</fullName>
    <formula>Negoptim__Ref_Client_ND_ClientBased_Nego__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref Client ND CltBased Pts</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>