force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Release_Date__c</fullName>
    <description>Date for diffusion to FDV</description>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>