force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__WD_Conso__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__WD_Conso__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Row has been aggregated to the conso layer</description>
    <inlineHelpText>Lignes agrégées sur la conso</inlineHelpText>
    <label>WD Conso</label>
    <type>Checkbox</type>
</CustomField>