force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/Negoptim__Year__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Year__c</fullName>
    <formula>Negoptim__Assortment_BU__r.Negoptim__Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>