force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/SPKERC_Tonne_YE_Corr__c.field-meta.xml
<CustomField>
    <fullName>SPKERC_Tonne_YE_Corr__c</fullName>
    <formula>Negoptim__New_Client_Tone_YE__c *  SPKERC_Execution_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tonne revalorisée</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>