force-app/main/default/objects/Negoptim__Assortment_Detail__c/fields/SPKERC_Weight_WD__c.field-meta.xml
<CustomField>
    <fullName>SPKERC_Weight_WD__c</fullName>
    <formula>(Negoptim__New_Client_WD_MarketBased__c / Negoptim__Ref_Corp_Assortment__r.Negoptim__New_Client_WD_MarketBased__c) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight WD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>