force-app/main/default/objects/Negoptim__Assortment_Detail__c/recordTypes/Negoptim__Higher_Level_Packaging.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Higher_Level_Packaging</fullName>
    <active>true</active>
    <label>Higher-Level Packaging</label>
</RecordType>