force-app/main/default/objects/Negoptim__Assortment_Detail__c/validationRules/Negoptim__Client_Status_Not_Blank_On_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Negoptim__Client_Status_Not_Blank_On_Validation</fullName>
    <active>true</active>
    <description>Client status shouldn&apos;t be blank on Validation.</description>
    <errorConditionFormula>AND(Negoptim__Assortment_BU__r.RecordType.DeveloperName
&lt;&gt;&quot;Budget&quot;, Negoptim__Assortment_BU__r.RecordType.DeveloperName
&lt;&gt;&quot;Conso&quot;, ISPICKVAL(Negoptim__Status__c, &quot;Validated&quot;), ISPICKVAL(Negoptim__Client_Status__c, &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Negoptim__Client_Status__c</errorDisplayField>
    <errorMessage>Cannot validate the record because the client status is blank.</errorMessage>
</ValidationRule>