force-app/main/default/objects/Negoptim__Assortment_Detail__c/validationRules/Negoptim__Movement_Date_Between_Parent_Year_P1_N1.validationRule-meta.xml
<ValidationRule>
    <fullName>Negoptim__Movement_Date_Between_Parent_Year_P1_N1</fullName>
    <active>true</active>
    <description>Assortment Detail Movement Date should be between the assortment previous year and next year.</description>
    <errorConditionFormula>OR(YEAR(Negoptim__Movement_Date__c) &lt; Negoptim__Assortment_BU__r.Negoptim__Year__c - 1, YEAR(Negoptim__Movement_Date__c) &gt;  Negoptim__Assortment_BU__r.Negoptim__Year__c + 1)</errorConditionFormula>
    <errorDisplayField>Negoptim__Movement_Date__c</errorDisplayField>
    <errorMessage>Movement Date should be between the Assortment &quot;Year - 1&quot; and &quot;Year + 1&quot;</errorMessage>
</ValidationRule>