force-app/main/default/objects/Negoptim__Assortment_Detail__c/validationRules/Negoptim__Movement_Date_Not_Blank_On_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Negoptim__Movement_Date_Not_Blank_On_Validation</fullName>
    <active>true</active>
    <description>Movement Date shouldn&apos;t be blank on Validation.</description>
    <errorConditionFormula>AND(Negoptim__Assortment_BU__r.RecordType.DeveloperName 
&lt;&gt; &quot;Budget&quot;, ISPICKVAL(Negoptim__Status__c, &quot;Validated&quot;), OR(ISNULL(Negoptim__Movement_Date__c), ISBLANK(Negoptim__Movement_Date__c)))</errorConditionFormula>
    <errorDisplayField>Negoptim__Movement_Date__c</errorDisplayField>
    <errorMessage>Cannot validate the record because the Movement Date is blank.</errorMessage>
</ValidationRule>