force-app/main/default/objects/Negoptim__Assortment_Detail__c/validationRules/Negoptim__WDs_from_0_to_100_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Negoptim__WDs_from_0_to_100_only</fullName>
    <active>true</active>
    <errorConditionFormula>(Negoptim__New_Client_WD_MarketBased__c &lt;0)  || (Negoptim__New_Client_WD_MarketBased__c &gt;1)</errorConditionFormula>
    <errorMessage>Vérifier les valeurs saisies. Elles doivent se situer entre 0 et 100.</errorMessage>
</ValidationRule>